Fix animation speed on mobile touch, reduce mobile font size

--- a/themes/terminalator/assets/scss/_base.scss
+++ b/themes/terminalator/assets/scss/_base.scss
@@ -20,7 +20,7 @@ html {
   text-rendering: geometricPrecision;
 
   @media (max-width: $mobile) {
-    font-size: 15px;
+    font-size: 14px;
   }
 }
 
